[gd_scene load_steps=10 format=3 uid="uid://bi82la3xn3hp2"]

[ext_resource type="PackedScene" uid="uid://x8q617q250qp" path="res://src/main/component/projectile_base.tscn" id="1_uop6l"]
[ext_resource type="Script" path="res://src/main/scene/role/standard_weapons/weapon_19/gathering_thunder.gd" id="2_sdawt"]
[ext_resource type="Texture2D" uid="uid://bfyomceqws6p2" path="res://assets/MyVFX/ThunderVFX/thunder_02/Spritesheet.png" id="3_3bvnp"]

[sub_resource type="Curve" id="Curve_bjoi6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yphw1"]
radius = 38.0
height = 130.0

[sub_resource type="Animation" id="Animation_dvjjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eoww1"]
resource_name = "finish"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/HitBox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.95, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.65, 0.85),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pulling_enemies"
}, {
"args": [],
"method": &"erase_lines"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7jm8"]
_data = {
"RESET": SubResource("Animation_dvjjx"),
"finish": SubResource("Animation_eoww1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qxjmp"]
radius = 125.0

[node name="GatheringThunder" instance=ExtResource("1_uop6l")]
script = ExtResource("2_sdawt")
max_attration_speed = 1000.0
attration_speed_curve = SubResource("Curve_bjoi6")

[node name="Sprite2D" parent="Graphics" index="0"]
visible = false
position = Vector2(0, -64)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_3bvnp")
hframes = 23

[node name="HitBox" parent="Graphics" index="1"]
monitoring = false

[node name="CollisionShape2D" parent="Graphics/HitBox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yphw1")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_l7jm8")
}

[node name="PullingArea2D" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PullingArea2D" index="0"]
shape = SubResource("CircleShape2D_qxjmp")

[connection signal="body_entered" from="PullingArea2D" to="." method="_on_pulling_area_2d_body_entered"]
[connection signal="body_exited" from="PullingArea2D" to="." method="_on_pulling_area_2d_body_exited"]
